# connector

./: .gitignore  Makefile  README.md  main.py  migration_tool.spec  test.py
backend/: app.py  migration_runner.py  migration_runner.spec  pyproject.toml
backend/migrationV1/: migration.py  migration_runner.py  migration_type.py
backend/migrationV1/QBOperations/: bill_operations.py  customer_operations.py  item_operations.py  qb_operations.py  sales_operations.py  sales_receipt_operations.py
backend/migrationV1/util/: excel_loader.py
backend/migration_tool/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  warn-migration_tool.txt  xref-migration_tool.html
backend/migrator/: main.py
backend/migrator/operations/qb/: bill.py  customer.py  sales_receipt.py  vendor.py
backend/migrator/services/migrations/: migration_manager.py  sale_receipt.py  vendor.py
frontend/: package-lock.json  package.json
frontend/src/: index.html  main.js
migration/: migration_runner.py
migration/QBOperations/: bill_operations.py  qb_operations.py  vendor_operations.py
migrationV1/: excel_loader.py  logger_config.py  migration.py  migration_runner.py
migrationV1/QBOperations/: bill_operations.py  item_operations.py  vendor_operations.py
migrationV1/util/: logger_config.py
migrator/models/: migration_type.py
migrator/operations/qb/: item.py  qb.py
migrator/services/migrations/: bill.py  item.py  migration_manager.py
migrator/util/: cache.py  config.py  excel_loader.py  gui.py
