[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Vick Mu <arbi3400@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pandas = "^2.2.2"
requests = "^2.32.3"
pyodbc = "^5.1.0"
tk = "^0.1.0"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"
auto-py-to-exe = "^2.44.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
